# quizztine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.opencode/agents/: doc.md
services/frontend/: .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
services/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
services/frontend/src/components/: AdminLayout.tsx  AdminRoute.tsx  AudioRecorder.tsx  CircularTimer.tsx  FeedbackBanner.tsx  LanguageSwitcher.tsx  Layout.tsx  QuestionForm.tsx  (+3 more)
services/quiz-engine/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/quiz-engine/src/: answer_validator.py  config.py  errors.py  game_flow.py  logger.py  main.py  notifications.py  room_store.py  routes.py  schemas.py  scoring.py
services/quiz-engine/tests/: conftest.py  test_game_flow.py  test_routes.py  test_scoring.py
services/web-backend/: .env.example  Dockerfile  Dockerfile.dev  docker-entrypoint.prod.sh  docker-entrypoint.sh  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  tsconfig.json
services/web-backend/prisma/: schema.prisma  seed.ts
services/web-backend/scripts/: fix-prisma-imports.mjs
services/web-backend/src/: app.ts  index.ts
(+147 files in other folders)
